manifests/prod/bencher-api/Namespace-bencher-api.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: bencher-api
