manifests/prod/bencher-api/EndpointSlice-bencher-api.yaml
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 100.83.142.17
    conditions:
      ready: true
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: bencher-api
  name: bencher-api
  namespace: bencher-api
ports:
  - name: http
    port: 61016
    protocol: TCP
