manifests/prod/bencher-api/Service-bencher-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: bencher-api
  namespace: bencher-api
spec:
  ports:
    - name: http
      port: 80
      targetPort: 61016
  type: ClusterIP
